--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.12.1",
+    "ip": "^2.0.1",
     "nanoid": "^5.0.7",
     "nuxt": "^3.12.4",
     "nuxt-mongoose": "^1.0.6",
     "vue": "latest"
   },
   "devDependencies": {
+    "@types/ip": "^1.1.3",
     "@types/nanoid": "^3.0.0",
     "typescript": "^5.5.4",
     "vue-tsc": "^1.8.27"
