--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@types/ip": "^1.1.3",
+    "@types/lodash": "^4.17.7",
     "@types/nanoid": "^3.0.0",
     "typescript": "^5.5.4",
     "vue-tsc": "^1.8.27"
